Added Maven support for all project parts (including meta-pom).